# ImpactIsolation

./: .gitignore  README.md
python/impact-isolation/: pyproject.toml
python/impact-isolation/impact_isolation/: main.py
python/impact-isolation/impact_isolation/game/: __init__.py  agent.py  board.py  exceptions.py  isolation.py  models.py
python/impact-isolation/impact_isolation/render/: render.py
