[tool.poetry]
name = "impact-isolation"
version = "0.1.0"
description = ""
authors = ["Zenith <zenith@pawgge.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mypy = "^1.12.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
tqdm = "^4.66.5"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
